--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 :root {
   width: 100%;
 
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Roboto, Arial, sans-serif !important;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #263238;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
