--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   width: 100%;
+  height: 100%;
 
   font-family: Roboto, Arial, sans-serif !important;
   line-height: 1.5;
@@ -19,9 +20,6 @@
 body {
   display: grid;
   place-items: center;
-  height: 100vh;
-
-  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
