start project technologies page and tidy-up

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 :root {
   width: 100%;
-  height: 100%;
 
   font-family: Roboto, Arial, sans-serif !important;
   line-height: 1.5;
@@ -8,7 +7,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #263238;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -22,4 +20,5 @@ body {
   place-items: center;
   padding: 0;
   box-sizing: border-box;
+  height: 100vh;
 }
