--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,13 @@
   -webkit-text-size-adjust: 100%;
 }
 
+#root {
+  width: 100%;
+}
+
 body {
   display: grid;
   place-items: center;
   padding: 0;
   box-sizing: border-box;
-  height: 100vh;
 }
