--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,20 @@
-:root {
-  width: 100%;
+html,
+body {
+  padding: 0;
+  margin: 0;
+  -webkit-font-smoothing: antialiased !important;
+  height: 100%;
+}
 
+html > body > div#root {
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+:root {
   font-family: Roboto, Arial, sans-serif !important;
   line-height: 1.5;
   font-weight: 400;
@@ -13,16 +27,4 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
-
-#root {
-  width: 100%;
-}
-
-body {
-  display: grid;
-  place-items: center;
-  padding: 0;
-  box-sizing: border-box;
-  height: 100vh;
 }
